--- a/.org/readme.org
+++ b/.org/readme.org
@@ -94,6 +94,15 @@ Run the script:
   sh github_docker_processor.py path_to_your_yaml_file.yaml
 #+end_src
 
+This script will ultimately push to DockerHub images that look like this:
+
+#+begin_src sh
+  docker push user/repo:5.4
+  docker push user/repo:5.5
+  docker push anotheruser/another-repo:master
+  docker push anotheruser/another-repo:develop
+#+end_src
+
 ** Cleanup
 :PROPERTIES:
 :CUSTOM_ID: h-CF21FF2B
