--- a/.org/readme.org
+++ b/.org/readme.org
@@ -125,3 +125,14 @@ You can put this Python script in cron, e.g.,
   0 */12 * * * /home/user/github-docker-automation/check-docker-digest.py \
     config.yml >> /tmp/tomcat-cron.out 2>&1
 #+end_src
+
+** Optional Builds
+:PROPERTIES:
+:CUSTOM_ID: h-BE3EA4F8
+:END:
+
+~check-docker-digest.py~ can build and push updated images to DockerHub in response to upstream changes. To enable this feature, add an optional ~github_docker_repo~ key in the configuration, which should link to the repository settings used by ~github_docker_processor.py~. For example:
+
+#+begin_src yml
+  github_docker_repos: "repos.yml"
+#+end_src
